--- a/bsp/beaglebone/SConstruct
+++ b/bsp/beaglebone/SConstruct
@@ -12,6 +12,7 @@ from building import *
 
 TARGET = 'rtthread-beaglebone.' + rtconfig.TARGET_EXT
 
+SetOption('experimental','ninja')
 DefaultEnvironment(tools=[])
 env = Environment(tools = ['mingw'],
 	AS = rtconfig.AS, ASFLAGS = rtconfig.AFLAGS,
@@ -20,6 +21,7 @@ env = Environment(tools = ['mingw'],
 	AR = rtconfig.AR, ARFLAGS = '-rc',
 	LINK = rtconfig.LINK, LINKFLAGS = rtconfig.LFLAGS)
 env.PrependENVPath('PATH', rtconfig.EXEC_PATH)
+env.Tool('ninja')
 
 Export('RTT_ROOT')
 Export('rtconfig')
