--- a/bsp/beaglebone/SConstruct
+++ b/bsp/beaglebone/SConstruct
@@ -12,7 +12,7 @@ from building import *
 
 TARGET = 'rtthread-beaglebone.' + rtconfig.TARGET_EXT
 
-SetOption('experimental','ninja')
+#SetOption('experimental','ninja')
 DefaultEnvironment(tools=[])
 env = Environment(tools = ['mingw'],
 	AS = rtconfig.AS, ASFLAGS = rtconfig.AFLAGS,
